--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -3,6 +3,7 @@
 <table>
   <thead>
     <tr>
+      <th>Sent at</th>
       <th>List</th>
       <th>Name</th>
       <th>Subject</th>
@@ -17,7 +18,7 @@
   <tbody>
     <% @histories.each do |history| %>
       <tr>
-        <td><%= history.created_at %></td>
+        <td><%= history.created_at.to_formatted_s(:short)  %></td>
         <td><%= history.list %></td>
         <td><%= history.name %></td>
         <td><%= history.subject %></td>
@@ -33,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New History', new_history_path %>
+
