--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="/references">Home</a></li>
+  <li role="presentation"><a href="/histories">Reports</a></li>
+</ul>
 <%= yield %>
 
 </body>
