--- a/app/views/references/_filter_options.html.erb
+++ b/app/views/references/_filter_options.html.erb
@@ -21,7 +21,7 @@
 
  
   <div class="col-md-12">
-  <%= link_to ref, :controller=> "references", :action=> "filter_by_reference_specialization", :ref_spec => "200000", :remote => true %> 
+  <%= link_to "ALL", :controller=> "references", :action=> "filter_by_reference_specialization", :ref_spec => "200000", :remote => true %> 
 
   <%- references = Reference.all.distinct(:ReferenceSpecialization)%>
   
