--- a/app/views/references/_items_grid.html.erb
+++ b/app/views/references/_items_grid.html.erb
@@ -26,7 +26,7 @@
       <td><%= check_box_tag "ref_ids[]",ref.id , false%> </td>
       <td><%= best_in_place ref, :Name, tabindex: "1" %></td>
       
-      <td><%= ref.emails[0] if ref.emails.size>0 %></td>
+      <td><%= ref.Emails[0] if ref.Emails.size>0 %></td>
       <td><%= ref.ReferenceName %></td>
       <td><%= ref.ReferenceEmail %></td>
       <td><%= ref.ReferenceSpecialization %></td>
