inclusion of sorting .

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,7 +1,7 @@
 %h1
   %center
     Facebook Groups Controller
-%form{:action => "post", :method => "post"}
+%form{:action => "groups/post", :method => "post"}
   .form-group
     .space-12
     %input.form-control{:height => "200", :name => "message", :pattern => ".{20,}", :placeholder => "Enter Your Message", :type => "textarea"}/
