changes in mail sending script/

--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -22,6 +22,8 @@
       %select{:name => "type_pos"}
         %option{:value => "share"} Share post
         %option{:value => "comment"} Comment  on post
+        %option{:value => "activity"} activity on facebook
+
     .col-xs-12{:style => "width:auto; float:left; margin:0 12px 12px 0;"}
       %select{:name => "type_application"}
         %option{:value => "Buzz4health"} Buzz4health Sharing
