--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -108,7 +108,7 @@
     %option{:value => "testing" } testing
 
   .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
-    %select{:name => "type_pos"}
+    %select{:name => "type_database"}
       %option{:value => "justdial"} Just Dial
       %option{:value => "buzz4health"} Buzz4health User
       %option{:value => "reference"} Reference Database
