--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
 <ul class="nav nav-tabs">
   <li role="presentation" class="active"><a href="/references">Home</a></li>
   <li role="presentation"><a href="/histories">Reports</a></li>
+  <li role="presentation"><a href="/mails_using_gmail_api">Mails sending through Gmail Api</a></li>
+  <li role="presentation"><a href="/groups">Facebook Sharing</a></li>
+  <li role="presentation"><a href="/mails">Mails sending though broswer </a></li>
+  
+
+
+
 </ul>
 <%= yield %>
 
