bug fixes and inclusion of multithreading.

--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -5,162 +5,165 @@
 %form{:action => "/mails_using_gmail_api/post", :method => "post"}
   .space-12
   %select#lstFruits{:multiple => "multiple", :name => "specialization[]"}
-    %option{:value => "Anaesthesiology" } Anaesthesiology
-    %option{:value => "Anasthesia & Critical Care Medicine" } Anasthesia & Critical Care Medicine
-    %option{:value => "Anasthesiology" } Anasthesiology
-    %option{:value => "Anatomy" } Anatomy
-    %option{:value => "Audiometry" } Audiometry
-    %option{:value => "Bariatric Surgery" } Bariatric Surgery
-    %option{:value => "CTVS" } CTVS
-    %option{:value => "Cardiac Anasthesiology" } Cardiac Anasthesiology
-    %option{:value => "Cardiac Electrophysiology" } Cardiac Electrophysiology
-    %option{:value => "Cardiology" } Cardiology
-    %option{:value => "Cardiothoracic Surgery" } Cardiothoracic Surgery
-    %option{:value => "Clinical Immunology" } Clinical Immunology
-    %option{:value => "Cosmetic Dentistry" } Cosmetic Dentistry
-    %option{:value => "Critical Care & ICU" } Critical Care & ICU
-    %option{:value => "Dentistry" } Dentistry
-    %option{:value => "Dermatology" } Dermatology
-    %option{:value => "Emergency Medicine" } Emergency Medicine
-    %option{:value => "Endocrinology" } Endocrinology
-    %option{:value => "Endodontics & Conservative Dentistry" } Endodontics & Conservative Dentistry
-    %option{:value => "Family Medicine" } Family Medicine
-    %option{:value => "Forensic Medicine" } Forensic Medicine
-    %option{:value => "Gasteroenterology" } Gasteroenterology
-    %option{:value => "Gastroenterology" } Gastroenterology
-    %option{:value => "Gastrosurgery" } Gastrosurgery
-    %option{:value => "General Anasthesiology" } General Anasthesiology
-    %option{:value => "General Dentistry" } General Dentistry
-    %option{:value => "General Medicine (MBBS)" } General Medicine (MBBS)
-    %option{:value => "General Pediatrics" } General Pediatrics
-    %option{:value => "General Surgery" } General Surgery
-    %option{:value => "Genetics" } Genetics
-    %option{:value => "Geriatric Medicine" } Geriatric Medicine
-    %option{:value => "Gynecological Oncology" } Gynecological Oncology
-    %option{:value => "Hemato-oncology" } Hemato-oncology
-    %option{:value => "Hematology" } Hematology
-    %option{:value => "Hepatology" } Hepatology
-    %option{:value => "Implantology" } Implantology
-    %option{:value => "Infectious Diseases" } Infectious Diseases
-    %option{:value => "Internal Medicine" } Internal Medicine
-    %option{:value => "Internal Medicine (MD)" } Internal Medicine (MD)
-    %option{:value => "Interventional Cardiology" } Interventional Cardiology
-    %option{:value => "Laser Dentistry" } Laser Dentistry
-    %option{:value => "Medical Oncology" } Medical Oncology
-    %option{:value => "Medicine" } Medicine
-    %option{:value => "Microbiology" } Microbiology
-    %option{:value => "Neonatology" } Neonatology
-    %option{:value => "Nephrology" } Nephrology
-    %option{:value => "Neuro Anasthesiology" } Neuro Anasthesiology
-    %option{:value => "Neurology" } Neurology
-    %option{:value => "Neurosurgery" } Neurosurgery
-    %option{:value => "Nursing Professional" } Nursing Professional
-    %option{:value => "Obstetrics & Gynecology" } Obstetrics & Gynecology
-    %option{:value => "Ophthalmology" } Ophthalmology
-    %option{:value => "Oral Medicine in Radiology" } Oral Medicine in Radiology
-    %option{:value => "Oral and Maxillofacial Surgery" } Oral and Maxillofacial Surgery
-    %option{:value => "Oral pathology" } Oral pathology
-    %option{:value => "Orthodontics" } Orthodontics
-    %option{:value => "Orthopedics" } Orthopedics
-    %option{:value => "Other" } Other
-    %option{:value => "Otorhinolaryngology(ENT)" } Otorhinolaryngology(ENT)
-    %option{:value => "Palliative Medicine" } Palliative Medicine
-    %option{:value => "Paramedical" } Paramedical
-    %option{:value => "Pathology" } Pathology
-    %option{:value => "Pediatric Anasthesiology" } Pediatric Anasthesiology
-    %option{:value => "Pediatric Cardiac Surgery" } Pediatric Cardiac Surgery
-    %option{:value => "Pediatric Cardiology" } Pediatric Cardiology
-    %option{:value => "Pediatric Dentistry" } Pediatric Dentistry
-    %option{:value => "Pediatric Gastroenterology" } Pediatric Gastroenterology
-    %option{:value => "Pediatric Hematology" } Pediatric Hematology
-    %option{:value => "Pediatric Hepatology" } Pediatric Hepatology
-    %option{:value => "Pediatric Intensive Care" } Pediatric Intensive Care
-    %option{:value => "Pediatric Nephrology" } Pediatric Nephrology
-    %option{:value => "Pediatric Neurology" } Pediatric Neurology
-    %option{:value => "Pediatric Oncology" } Pediatric Oncology
-    %option{:value => "Pediatric Psychiatry" } Pediatric Psychiatry
-    %option{:value => "Pediatric Surgery" } Pediatric Surgery
-    %option{:value => "Pediatric Urology" } Pediatric Urology
-    %option{:value => "Pediatrics" } Pediatrics
-    %option{:value => "Pedodontics" } Pedodontics
-    %option{:value => "Periodontics" } Periodontics
-    %option{:value => "Pharmacology" } Pharmacology
-    %option{:value => "Physiology" } Physiology
-    %option{:value => "Physiotherapy" } Physiotherapy
-    %option{:value => "Preventive Medicine" } Preventive Medicine
-    %option{:value => "Preventive and Social Medicine" } Preventive and Social Medicine
-    %option{:value => "Prosthodontics" } Prosthodontics
-    %option{:value => "Psychiatry" } Psychiatry
-    %option{:value => "Psychology" } Psychology
-    %option{:value => "Public health Dentistry" } Public health Dentistry
-    %option{:value => "Radiation Oncology" } Radiation Oncology
-    %option{:value => "Radiology" } Radiology
-    %option{:value => "Reproductive Medicine" } Reproductive Medicine
-    %option{:value => "Respiratory Medicine" } Respiratory Medicine
-    %option{:value => "Rheumatology" } Rheumatology
-    %option{:value => "Robotic Surgery" } Robotic Surgery
-    %option{:value => "Speech Therapy" } Speech Therapy
-    %option{:value => "Surgical Oncology" } Surgical Oncology
-    %option{:value => "Thoracic Surgery" } Thoracic Surgery
-    %option{:value => "Urology/Kidney Transplant" } Urology/Kidney Transplant
-    %option{:value => "Vascular Surgery" } Vascular Surgery
-    %option{:value => "Virology" } Virology
-    %option{:value => "testing" } testing
-
+    %option{:value => "Anaesthesiology"} Anaesthesiology
+    %option{:value => "Anasthesia & Critical Care Medicine"} Anasthesia  Critical Care Medicine
+    %option{:value => "Anasthesiology"} Anasthesiology
+    %option{:value => "Anatomy"} Anatomy
+    %option{:value => "Audiometry"} Audiometry
+    %option{:value => "Bariatric Surgery"} Bariatric Surgery
+    %option{:value => "CTVS"} CTVS
+    %option{:value => "Cardiac Anasthesiology"} Cardiac Anasthesiology
+    %option{:value => "Cardiac Electrophysiology"} Cardiac Electrophysiology
+    %option{:value => "Cardiology"} Cardiology
+    %option{:value => "Cardiothoracic Surgery"} Cardiothoracic Surgery
+    %option{:value => "Clinical Immunology"} Clinical Immunology
+    %option{:value => "Cosmetic Dentistry"} Cosmetic Dentistry
+    %option{:value => "Critical Care & ICU"} Critical Care  ICU
+    %option{:value => "Dentistry"} Dentistry
+    %option{:value => "Dermatology"} Dermatology
+    %option{:value => "Emergency Medicine"} Emergency Medicine
+    %option{:value => "Endocrinology"} Endocrinology
+    %option{:value => "Endodontics & Conservative Dentistry"} Endodontics  Conservative Dentistry
+    %option{:value => "Family Medicine"} Family Medicine
+    %option{:value => "Forensic Medicine"} Forensic Medicine
+    %option{:value => "Gasteroenterology"} Gasteroenterology
+    %option{:value => "Gastroenterology"} Gastroenterology
+    %option{:value => "Gastrosurgery"} Gastrosurgery
+    %option{:value => "General Anasthesiology"} General Anasthesiology
+    %option{:value => "General Dentistry"} General Dentistry
+    %option{:value => "General Medicine (MBBS)"} General Medicine (MBBS)
+    %option{:value => "General Pediatrics"} General Pediatrics
+    %option{:value => "General Surgery"} General Surgery
+    %option{:value => "Genetics"} Genetics
+    %option{:value => "Geriatric Medicine"} Geriatric Medicine
+    %option{:value => "Gynecological Oncology"} Gynecological Oncology
+    %option{:value => "Hemato-oncology"} Hemato-oncology
+    %option{:value => "Hematology"} Hematology
+    %option{:value => "Hepatology"} Hepatology
+    %option{:value => "Implantology"} Implantology
+    %option{:value => "Infectious Diseases"} Infectious Diseases
+    %option{:value => "Internal Medicine"} Internal Medicine
+    %option{:value => "Internal Medicine (MD)"} Internal Medicine (MD)
+    %option{:value => "Interventional Cardiology"} Interventional Cardiology
+    %option{:value => "Laser Dentistry"} Laser Dentistry
+    %option{:value => "Medical Oncology"} Medical Oncology
+    %option{:value => "Medicine"} Medicine
+    %option{:value => "Microbiology"} Microbiology
+    %option{:value => "Neonatology"} Neonatology
+    %option{:value => "Nephrology"} Nephrology
+    %option{:value => "Neuro Anasthesiology"} Neuro Anasthesiology
+    %option{:value => "Neurology"} Neurology
+    %option{:value => "Neurosurgery"} Neurosurgery
+    %option{:value => "Nursing Professional"} Nursing Professional
+    %option{:value => "Obstetrics & Gynecology"} Obstetrics  Gynecology
+    %option{:value => "Ophthalmology"} Ophthalmology
+    %option{:value => "Oral Medicine in Radiology"} Oral Medicine in Radiology
+    %option{:value => "Oral and Maxillofacial Surgery"} Oral and Maxillofacial Surgery
+    %option{:value => "Oral pathology"} Oral pathology
+    %option{:value => "Orthodontics"} Orthodontics
+    %option{:value => "Orthopedics"} Orthopedics
+    %option{:value => "Other"} Other
+    %option{:value => "Otorhinolaryngology(ENT)"} Otorhinolaryngology(ENT)
+    %option{:value => "Palliative Medicine"} Palliative Medicine
+    %option{:value => "Paramedical"} Paramedical
+    %option{:value => "Pathology"} Pathology
+    %option{:value => "Pediatric Anasthesiology"} Pediatric Anasthesiology
+    %option{:value => "Pediatric Cardiac Surgery"} Pediatric Cardiac Surgery
+    %option{:value => "Pediatric Cardiology"} Pediatric Cardiology
+    %option{:value => "Pediatric Dentistry"} Pediatric Dentistry
+    %option{:value => "Pediatric Gastroenterology"} Pediatric Gastroenterology
+    %option{:value => "Pediatric Hematology"} Pediatric Hematology
+    %option{:value => "Pediatric Hepatology"} Pediatric Hepatology
+    %option{:value => "Pediatric Intensive Care"} Pediatric Intensive Care
+    %option{:value => "Pediatric Nephrology"} Pediatric Nephrology
+    %option{:value => "Pediatric Neurology"} Pediatric Neurology
+    %option{:value => "Pediatric Oncology"} Pediatric Oncology
+    %option{:value => "Pediatric Psychiatry"} Pediatric Psychiatry
+    %option{:value => "Pediatric Surgery"} Pediatric Surgery
+    %option{:value => "Pediatric Urology"} Pediatric Urology
+    %option{:value => "Pediatrics"} Pediatrics
+    %option{:value => "Pedodontics"} Pedodontics
+    %option{:value => "Periodontics"} Periodontics
+    %option{:value => "Pharmacology"} Pharmacology
+    %option{:value => "Physiology"} Physiology
+    %option{:value => "Physiotherapy"} Physiotherapy
+    %option{:value => "Preventive Medicine"} Preventive Medicine
+    %option{:value => "Preventive and Social Medicine"} Preventive and Social Medicine
+    %option{:value => "Prosthodontics"} Prosthodontics
+    %option{:value => "Psychiatry"} Psychiatry
+    %option{:value => "Psychology"} Psychology
+    %option{:value => "Public health Dentistry"} Public health Dentistry
+    %option{:value => "Radiation Oncology"} Radiation Oncology
+    %option{:value => "Radiology"} Radiology
+    %option{:value => "Reproductive Medicine"} Reproductive Medicine
+    %option{:value => "Respiratory Medicine"} Respiratory Medicine
+    %option{:value => "Rheumatology"} Rheumatology
+    %option{:value => "Robotic Surgery"} Robotic Surgery
+    %option{:value => "Speech Therapy"} Speech Therapy
+    %option{:value => "Surgical Oncology"} Surgical Oncology
+    %option{:value => "Thoracic Surgery"} Thoracic Surgery
+    %option{:value => "Urology/Kidney Transplant"} Urology/Kidney Transplant
+    %option{:value => "Vascular Surgery"} Vascular Surgery
+    %option{:value => "Virology"} Virology
+    %option{:value => "testing"} testing
   .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
     %select{:name => "type_database"}
       %option{:value => "justdial"} Just Dial
       %option{:value => "buzz4health"} Buzz4health User
       %option{:value => "reference"} Reference Database
-
   %center
     .row
     .space-12
     .row
       .col-xs-12{:style => "float:left;width:50%;"}
-        %input.form-control{:name => "subject_email", :placeholder => "Enter Subject", :type => "text"}/
-        %input#authenticity_token{:name => "authenticity_token", :type => "hidden", :value => "p0bvfNLYe+RzMZL89zAbDJyjRZXPMKY03cjbIXGXujM="}/
-    .space-12
-    .row
-      .col-xs-12{:style => "float:left;width:50%;"}
-        %center
-          %label
-            Please Enter Html body:
-            %textarea{:cols => "70", :name => "html_body", :rows => "10"}
+        %input.form-control{:name => "subject_email", :placeholder => "Enter Subject", :type => "text"}
+          %input#authenticity_token{:name => "authenticity_token", :type => "hidden", :value => "p0bvfNLYe+RzMZL89zAbDJyjRZXPMKY03cjbIXGXujM="}
+        .space-12
+        .row
+          .col-xs-12{:style => "float:left;width:50%;margin:0 12px 12px 0;"}
+            %center
+              %label
+                Please Enter Html body:
+                %textarea{:cols => "70", :name => "html_body", :rows => "10"}
+              %center
+        .row
+          .col-xs-offset-1{:style => "float:right;width:50%;"}
+            %input{:name => "resume", :type => "checkbox", :value => "is_resume"}
+              Want to resume
+              %br
+        .space-12
+        .row
+          .col-xs-12{:style => "float:left;width:50%;"}
+            %center
+              %input.form-control{:name => "main_title", :placeholder => "Enter Title", :type => "text"}
+                %center
+        .space-12
+        .row
+          .col-xs-12{:style => "float:left;width:50%;"}
+            %center
+              %input.form-control{:name => "main_description", :placeholder => "Enter Description", :type => "text"}
+                %center
+        .space-12
+        .row
+          .col-xs-12{:style => "float:left;width:50%;"}
+            %center
+              %input.form-control{:name => "Action_url", :placeholder => "Enter Action Url", :type => "text"}
+                %center
+        .space-12
+        .row
+          .col-xs-12{:style => "float:left;width:50%;"}
+            %center
+              %input.form-control{:name => "Image_url", :placeholder => "Enter Image Url", :type => "text"}
+                %center
+        .space-12
+        .form-group
           %center
-    .space-12
-    .row
-      .col-xs-12{:style => "float:left;width:50%;"}
-        %center
-          %input.form-control{:name => "main_title", :placeholder => "Enter Title", :type => "text"}/
-          %center
-    .space-12
-    .row
-      .col-xs-12{:style => "float:left;width:50%;"}
-        %center
-          %input.form-control{:name => "main_description", :placeholder => "Enter Description", :type => "text"}/
-          %center
-    .space-12
-    .row
-      .col-xs-12{:style => "float:left;width:50%;"}
-        %center
-          %input.form-control{:name => "Action_url", :placeholder => "Enter Action Url", :type => "text"}/
-          %center
-    .space-12
-    .row
-      .col-xs-12{:style => "float:left;width:50%;"}
-        %center
-          %input.form-control{:name => "Image_url", :placeholder => "Enter Image Url", :type => "text"}/
-          %center
-    .space-12
-    .form-group
-      %center
-        %button#active_user_campaign.btn.btn-sm.btn-danger{:onclick => "return confirm('Are you really sure you want to send this out')", :type => "submit"}
-          %i.icon-lightbulb
-          Post Message
-:javascript
-  $(function () {
-      $('#lstFruits').multiselect({
-          includeSelectAllOption: true
-      });
-  });
+            %button#active_user_campaign.btn.btn-sm.btn-danger{:onclick => "return confirm('Are you really sure you want to send this out')", :type => "submit"}
+              %i.icon-lightbulb
+              Post Message
+            :javascript
+              $(function () {
+                  $('#lstFruits').multiselect({
+                      includeSelectAllOption: true
+                  });
+              });
