--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,12 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
+   <% if content_for? :for_head %>
+    <%= yield :for_head %>
+  <% end %>
+
+
 </head>
 <body>
 <ul class="nav nav-tabs">
@@ -13,6 +19,8 @@
   <li role="presentation"><a href="/mails_using_gmail_api">Mails sending through Gmail Api</a></li>
   <li role="presentation"><a href="/groups">Facebook Sharing</a></li>
   <li role="presentation"><a href="/mails">Mails sending though broswer </a></li>
+  <li role="presentation"><a href="/logs">Logs for Gmail</a></li>
+
   
 
 
