--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -114,7 +114,13 @@
       %option{:value => "justdial"} Just Dial
       %option{:value => "buzz4health"} Buzz4health User
       %option{:value => "reference"} Reference Database
-  
+  .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
+    %select{:name => "type_country"}
+      %option{:value => "India"}India
+      %option{:value => "US"}US
+      %option{:value => "UK"}UK
+      %option{:value => "CA"}Canada
+
   %center
     .row
     .space-12
