Uploaded new code shared by Sheerin

--- a/public/lucknow-zoo/css/style.css
+++ b/public/lucknow-zoo/css/style.css
@@ -2512,4 +2512,8 @@ textarea:focus{
     vertical-align: middle;
   }
 }
-/*Picked from Asentus*/
+/*Events*/
+.Events h3{
+padding: 10px;
+font-weight: bolder;
+}
